<resources>
    <string name="app_name">Fraternity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_title">Select Category</string>
    <string name="title">Where Musicians and Bands meet to make music</string>
    <string name="join_text">JOIN</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="log_in">Log In </string>
    <string name="log_in_desc"> Are you set to enter the world of entertainment</string>
    <string name="signin_failure_message">Failed to sign in</string>
    <string name="user_name">User/Band name</string>
    <string name="user_email">Email Address</string>
    <string name="user_web_link">Web Link</string>
    <string name="user_instagram_link">Instagram Link</string>
    <string name="user_categories">Select Category</string>
    <string name="enter_user_name">Enter User/Band Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_web_link">Enter Web Link</string>
    <string name="enter_instagram">Enter Instagram Link</string>
    <string name="save_button">Save</string>
    <string name="please_enter_correct_email_address">"Please enter correct email address "</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="saving_data">Saving data</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="category">Category</string>
    <string name="full_name">Full Name</string>
    <string name="change_photo">Change Photo</string>
    <string name="get_otp">Get Otp</string>
    <string name="no_results_found_n_we_will_be_back_with_updated_data">No results found! \n We will be back with updated data.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fraternity">Fraternity</string>
    <string name="search_here">Search here...</string>
    <string name="looking_for_bands_for_events">Looking for Bands for events</string>
    <string name="network_issue_please_try_again">Network issue , please try again</string>
    <string name="logout">logout</string>
    <string name="please_enter_correct_details">"Please enter correct details: "</string>
    <string name="enter_user_band_name">Enter User/Band name</string>
    <string name="enter_weblink">Enter weblink</string>
    <string name="enter_instagram_link">Enter instagram link</string>
</resources>
